# robotframework-pgp

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  debug_delete.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: codeql.yml  docs.yml  release.yml  test.yml
docs/: api.rst  changelog.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  keywords.rst  quickstart.rst
examples/: basic_usage.robot  file_operations.robot
src/RobotFrameworkPGP/: __init__.py  pgp_library.py
tests/: __init__.py  conftest.py  test_pgp_library.py
tests/acceptance/: advanced_features.robot  basic_encryption.robot  file_encryption.robot
