[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robotframework-pgp"
version = "1.0.0"
description = "Robot Framework library for PGP/GPG encryption and decryption operations"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Robot Framework PGP Contributors"}
]
maintainers = [
    {name = "Robot Framework PGP Contributors"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Robot Framework :: Library",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Testing",
]
keywords = ["robotframework", "testing", "pgp", "gpg", "encryption", "cryptography"]
requires-python = ">=3.8"
dependencies = [
    "robotframework>=4.0.0",
    "python-gnupg>=0.5.0",
    "cryptography>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinx-autodoc-typehints>=1.19.0",
]

[project.urls]
Homepage = "https://github.com/robotframework/robotframework-pgp"
Documentation = "https://robotframework-pgp.readthedocs.io/"
Repository = "https://github.com/robotframework/robotframework-pgp"
"Bug Tracker" = "https://github.com/robotframework/robotframework-pgp/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=RobotFrameworkPGP --cov-report=html --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true